tests/baselines/reference/importsNotUsedAsValues_error.errors.txt
/b.ts(1,1): error TS1371: This import is never used as a value and must use 'import type' because 'importsNotUsedAsValues' is set to 'error'.
/c.ts(1,1): error TS1371: This import is never used as a value and must use 'import type' because 'importsNotUsedAsValues' is set to 'error'.
/e.ts(1,1): error TS6192: All imports in import declaration are unused.
/g.ts(1,1): error TS1371: This import is never used as a value and must use 'import type' because 'importsNotUsedAsValues' is set to 'error'.
/i.ts(1,1): error TS1371: This import is never used as a value and must use 'import type' because 'importsNotUsedAsValues' is set to 'error'.


==== /a.ts (0 errors) ====
    export default class {}
    export class A {}
    export type B = {};
    export const enum C { One, Two }
    
==== /b.ts (1 errors) ====
    import { A, B } from './a'; // Error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1371: This import is never used as a value and must use 'import type' because 'importsNotUsedAsValues' is set to 'error'.
    let a: A;
    let b: B;
    console.log(a, b);
    
==== /c.ts (1 errors) ====
    import Default, * as named from './a'; // Error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1371: This import is never used as a value and must use 'import type' because 'importsNotUsedAsValues' is set to 'error'.
    let a: Default;
    let b: named.B;
    console.log(a, b);
    
==== /d.ts (0 errors) ====
    import Default, { A } from './a';
    const a = A;
    let b: Default;
    console.log(a, b);
    
==== /e.ts (1 errors) ====
    import { A, B } from './a'; // noUnusedLocals error only
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6192: All imports in import declaration are unused.
    
==== /f.ts (0 errors) ====
    import { C } from './a';
    import type { C as D } from './a';
    C.One;
    let c: D = C.Two;
    let d: D.Two = C.Two;
    console.log(c, d);
    
==== /g.ts (1 errors) ====
    import { C } from './a';
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1371: This import is never used as a value and must use 'import type' because 'importsNotUsedAsValues' is set to 'error'.
    let c: C;
    let d: C.Two;
    console.log(c, d);
    
==== /h.ts (0 errors) ====
    class H {}
    export = H;
    
==== /i.ts (1 errors) ====
    import H = require('./h'); // Error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1371: This import is never used as a value and must use 'import type' because 'importsNotUsedAsValues' is set to 'error'.
    let h: H = {};
    console.log(h);
    
==== /j.ts (0 errors) ====
    import H = require('./h'); // noUnusedLocals error only
    
==== /k.ts (0 errors) ====
    const enum K { One, Two }
    export = K;
    
==== /l.ts (0 errors) ====
    import K = require('./k');
    K.One;
    
==== /j.ts (0 errors) ====
    // Sad face https://github.com/microsoft/TypeScript/blob/6b04f5039429b9d412696fe2febe39ecc69ad365/src/testRunner/compilerRunner.ts#L207